# nanobanana

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  go.mod  install.sh  main.go  main_test.go  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.github/workflows/: release.yml
docs/: nate-translator-prompt.md  release.md
docs/notion-extracts/JSON-Prompt-Translator-A-Unified-Schema-for-UI-Diagrams-and-Marketing-Images-2bd5a2ccb5268054824cda1f5d7c66cf/: notion-content.md
docs/notion-extracts/Nano-Banana-Advertising-Prompts-2cc5a2ccb52680949c43c51372e86ecf/: notion-content.md
docs/notion-extracts/Nano-Banana-Straight-to-Slides-Prompts-2cc5a2ccb52680499b5ac6269a7070bd/: notion-content.md
examples/basic/: README.md
examples/branded-presentation/: README.md  presentation.md
examples/presentation/: README.md  presentation.md
skill/: README.md
skill/nanobanana/: Skill.md
skill/nanobanana/references/: guided-discovery.md  json-schemas.md
src/nanobanana/: __init__.py  __main__.py  cli.py  config.py  gemini.py  install_skill.py  mime.py  openrouter.py  setup.py  slide_templates.py  templates.py  update_check.py
tests/: test_api.py  test_cli.py  test_config.py  test_mime.py  test_setup.py  test_update_check.py
